@@ -923,7 +923,7 @@ public class IncrementalCooperativeAssignorTest {
         assignor.handleLostAssignments(lostAssignments, new ConnectorsAndTasks.Builder(),
                 new ArrayList<>(configuredAssignment.values()));
 
-        Set<String> expectedWorkers = new HashSet<>(Arrays.asList(newWorker, flakyWorker));
+        Set<String> expectedWorkers = Set.of(newWorker, flakyWorker);
         assertEquals(expectedWorkers,
             assignor.candidateWorkersForReassignment,
             "Wrong set of workers for reassignments");
@@ -1236,7 +1236,7 @@ public class IncrementalCooperativeAssignorTest {
         when(coordinator.configSnapshot()).thenReturn(configState());
         Map<String, ByteBuffer> serializedAssignments = assignor.performAssignment(
                 leader,
-                ConnectProtocolCompatibility.COMPATIBLE.protocol(),
+                ConnectProtocolCompatibility.COMPATIBLE,
                 memberMetadata,
                 coordinator
         );
@@ -1277,7 +1277,7 @@ public class IncrementalCooperativeAssignorTest {
         when(coordinator.configSnapshot()).thenReturn(configState());
         Map<String, ByteBuffer> serializedAssignments = assignor.performAssignment(
                 leader,
-                ConnectProtocolCompatibility.SESSIONED.protocol(),
+                ConnectProtocolCompatibility.SESSIONED,
                 memberMetadata,
                 coordinator
         );
@@ -1455,7 +1455,7 @@ public class IncrementalCooperativeAssignorTest {
     }
 
     private void assertWorkers(String... workers) {
-        assertEquals(new HashSet<>(Arrays.asList(workers)), returnedAssignments.allWorkers(), "Wrong set of workers");
+        assertEquals(Set.of(workers), returnedAssignments.allWorkers(), "Wrong set of workers");
     }
 
     /**
