@@ -29,10 +29,10 @@ import org.junit.jupiter.api.Test;
 import java.io.File;
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Properties;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -226,9 +226,9 @@ public class MetadataQuorumCommandUnitTest {
         Properties props = new Properties();
         props.setProperty("controller.listener.names", "CONTROLLER,CONTROLLER2");
         props.setProperty("listeners", "CONTROLLER://example.com:9092,CONTROLLER2://:9093");
-        assertEquals(new HashSet<>(Arrays.asList(
+        assertEquals(Set.of(
             new RaftVoterEndpoint("CONTROLLER", "example.com", 9092),
-            new RaftVoterEndpoint("CONTROLLER2", "localhost", 9093))),
+            new RaftVoterEndpoint("CONTROLLER2", "localhost", 9093)),
                 MetadataQuorumCommand.getControllerAdvertisedListeners(props));
     }
 
@@ -238,9 +238,9 @@ public class MetadataQuorumCommandUnitTest {
         props.setProperty("controller.listener.names", "CONTROLLER,CONTROLLER2");
         props.setProperty("listeners", "CONTROLLER://:9092,CONTROLLER2://:9093");
         props.setProperty("advertised.listeners", "CONTROLLER://example.com:9092,CONTROLLER2://example.com:9093");
-        assertEquals(new HashSet<>(Arrays.asList(
+        assertEquals(Set.of(
             new RaftVoterEndpoint("CONTROLLER", "example.com", 9092),
-            new RaftVoterEndpoint("CONTROLLER2", "example.com", 9093))),
+            new RaftVoterEndpoint("CONTROLLER2", "example.com", 9093)),
                 MetadataQuorumCommand.getControllerAdvertisedListeners(props));
     }
 
